--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
   letter-spacing: 0.037rem;
 }
 
-.headline h1 span {
+.headline h1 span h2 {
   font-family: 'Roboto', sans-serif;
   font-size: 2.4rem;
   line-height: 3.2rem;
