--- a/style.css
+++ b/style.css
@@ -57,17 +57,23 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 1.2rem;
-  padding: 12rem 2.4rem;
+  padding-top: 12rem;
   min-height: 59rem;
   min-width: 37.5rem;
   background-color: #1c1a19;
-  background-image: url("img/background/illustration-header-mobile.svg");
+}
+
+.headline-container {
+  min-height: 59rem;
+  min-width: 37.5rem;
+  align-self: center;
+  background-image: url("./img/background/illustration-header-mobile.svg");
   background-repeat: no-repeat;
-  background-position: right 120%;
+  background-position: bottom right;
 }
 
 .headline h1 {
-  font-family: 'Crete Round', serif;
+  font-family: 'Crete Round', sans-serif;
   color: #ff6b00;
   font-size: 5.6rem;
   line-height: 6.4rem;
@@ -130,4 +136,294 @@ body {
 .media-img:hover {
   cursor: pointer;
   filter: invert(49%) sepia(77%) saturate(5619%) hue-rotate(8deg) brightness(96%) contrast(97%);
+}
+
+/*** Main - Works section ***/
+
+.works-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  min-width: 32.7rem;
+  min-height: 8.3rem;
+  margin-top: 12rem;
+}
+
+.works-section h1 {
+  font-family: 'Crete Round', sans-serif;
+  font-size: 4rem;
+  line-height: 5.2rem;
+  color: #1c1a19;
+  text-align: center;
+  padding: 3rem;
+  min-width: 32.7rem;
+  height: 8.3rem;
+}
+
+.works-section hr {
+  width: 30.5rem;
+  border: 0.1rem solid #212121;
+  margin: 2.5rem auto 7.5rem auto;
+}
+
+.img-placeholder {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.works-stories h1 {
+  color: #091e42;
+  font-size: 3.2rem;
+  line-height: 4.4rem;
+  min-width: 32.7rem;
+  height: 3.6rem;
+}
+
+.works-stories p {
+  font-family: 'Inter', sans-serif;
+  color: #091e42;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  width: 32.7rem;
+  height: 14.7rem;
+  display: flex;
+  align-items: center;
+  margin: 2rem auto 2rem auto;
+}
+
+.languages-box {
+  display: flex;
+  justify-content: center;
+  min-width: 32.7rem;
+  font-family: 'Inter', sans-serif;
+}
+
+.languages-list {
+  display: grid;
+  grid-template-columns: 4.9rem 5.6rem 9.5rem 6.1rem;
+  grid-template-rows: 4rem 4rem;
+  gap: 1.2rem 1.2rem;
+  grid-template-areas:
+    "area-1 area-2 area-3 area-4"
+    "btn-area btn-area . .";
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  list-style: none;
+  width: 32.7rem;
+  height: 9rem;
+}
+
+.languages-list li {
+  border: 0.1rem solid #8993a4;
+  padding: 1rem 1.2rem;
+  border-color: #091e42;
+  text-align: center;
+}
+
+.btn-area {
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ff6b00;
+}
+
+.languages-list .btn-area {
+  border: none;
+  grid-area: 2 / span 2;
+}
+
+.btn {
+  font-weight: 700;
+  font-size: 1.7rem;
+  line-height: 2.4rem;
+  min-width: 10rem;
+  min-height: 2.4rem;
+  color: #fff;
+  text-decoration: none;
+}
+
+.btn-area:hover {
+  cursor: pointer;
+}
+
+/*** Other Projects ***/
+
+.project-box {
+  display: flex;
+  justify-content: center;
+  min-height: 38.6rem;
+  min-width: 32.7rem;
+  margin-top: 3rem;
+}
+
+.project-content {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+  background-image: url(./img/background/projects-background.png);
+  background-repeat: no-repeat;
+  max-width: 32.7rem;
+  max-height: 38.6rem;
+  padding-top: 2.4rem;
+}
+
+.project-content h1 {
+  font-family: 'Crete Round', sans-serif;
+  font-weight: 400;
+  font-size: 3.2rem;
+  line-height: 4.4rem;
+  color: #fff;
+  text-align: left;
+  min-width: 29.5rem;
+  min-height: 8.1rem;
+  padding-left: 1rem;
+}
+
+.project-content p {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  color: #fff;
+  max-width: 29.5rem;
+  max-height: 8.7rem;
+  padding-left: 1rem;
+}
+
+.project-content ul {
+  display: grid;
+  grid-template-columns: 5.4rem 9.5rem 6.1rem;
+  grid-template-rows: 4rem 4rem;
+  gap: 1.2rem 1.2rem;
+  grid-template-areas: "area-1 area-2 area-3";
+  min-width: 32.7rem;
+  min-height: 5rem;
+  padding-left: 1rem;
+  list-style: none;
+}
+
+.list-area {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.24);
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.large-btn-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: fit-content;
+  min-height: 4.8rem;
+  background-color: #ff6b00;
+  font-weight: 700;
+  font-size: 1.7rem;
+  line-height: 2.4rem;
+  font-family: 'Inter', sans-serif;
+  letter-spacing: 0.03rem;
+}
+
+.large-btn-area:hover {
+  cursor: pointer;
+}
+
+/** About Me Page **/
+
+.about_me {
+  min-width: 37.5rem;
+  min-height: 175.1rem;
+  background-color: #1c1a19;
+  display: flex;
+  flex-direction: column;
+}
+
+.about_me-container {
+  min-width: 37.5rem;
+  min-height: 55rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  row-gap: 1.5rem;
+  background-image: url("./img/background/illustration-about-me-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: top 76% right;
+}
+
+.about_me h1 {
+  font-family: 'Crete Round', sans-serif;
+  font-size: 7.2rem;
+  line-height: 8.8rem;
+  letter-spacing: 0.037rem;
+  font-weight: 400;
+  color: #ff6b00;
+  width: 32.7rem;
+  height: 7.9rem;
+}
+
+.about_me p {
+  font-family: 'Inter', sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  font-weight: 400;
+  color: #f4f5f7;
+  width: 32.7rem;
+  height: 14.8rem;
+}
+
+.about_me .btn-area {
+  position: relative;
+  right: 22%;
+  min-width: 16rem;
+  min-height: 4.8rem;
+}
+
+.about_me .btn {
+  font-family: 'Inter', sans-serif;
+}
+
+.about_me hr {
+  width: 30.5rem;
+  border: 0.1rem solid #fff;
+  margin: 2.5rem auto 7.5rem auto;
+  position: relative;
+  top: 14rem;
+}
+
+/** Skills Section **/
+
+.skills-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 12rem 2.4rem 3.8rem;
+  gap: 2.4rem;
+  font-family: 'Inter', sans-serif;
+  color: #fff;
+}
+
+.skills-header {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  min-width: 16.4rem;
+  min-height: 2.4rem;
+  font-size: 3.2rem;
+  line-height: 4.4rem;
+}
+
+.skills-section ul {
+  text-align: center;
+  list-style: none;
+  font-size: 2.2rem;
+  line-height: 4.3rem;
+  padding: 2.4rem;
 }
