Add margin-top to the about-me section

--- a/style.css
+++ b/style.css
@@ -339,6 +339,7 @@ body {
   background-color: #1c1a19;
   display: flex;
   flex-direction: column;
+  margin-top: 12rem;
 }
 
 .about_me-container {
@@ -352,6 +353,7 @@ body {
   background-image: url("./img/background/illustration-about-me-mobile.svg");
   background-repeat: no-repeat;
   background-position: top 76% right;
+  margin-top: 12rem;
 }
 
 .about_me h1 {
