--- a/style.css
+++ b/style.css
@@ -465,6 +465,13 @@ footer {
   align-items: center;
 }
 
+@media only screen and (min-width: 768px) {
+  .headline {
+    min-width: 100vw;
+  }
+}
+
+
 /** Button actions **/
 
 .btn-action:hover {
