--- a/style.css
+++ b/style.css
@@ -362,7 +362,7 @@ footer .media-img {
 .about_me-text {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .about_me h1 {
@@ -387,10 +387,9 @@ footer .media-img {
 }
 
 .about_me .btn-area {
-  position: relative;
-  right: 8rem;
   min-width: 16rem;
   min-height: 4.8rem;
+  margin-top: 0.5rem;
 }
 
 .about_me .btn {
@@ -420,6 +419,7 @@ footer .media-img {
 .skills-header {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 1rem;
   min-width: 16.4rem;
   min-height: 2.4rem;
@@ -530,10 +530,6 @@ footer {
 /** Media Query - Desktop **/
 
 @media only screen and (min-width: 768px) {
-  html {
-    font-size: 80%;
-  }
-
   .navbar,
   .headline,
   .about_me {
@@ -562,6 +558,12 @@ footer {
   }
 
   /** Headline **/
+
+  .headline {
+    background-image: url("./img/background/Illustration-header-desktop.svg");
+    background-size: contain;
+    background-position: bottom top right;
+  }
 
   .about_me ul {
     text-align: left;
@@ -700,20 +702,19 @@ footer {
   /** About Me **/
 
   .about_me {
-    min-height: 119.5rem;
+    min-height: 60vw;
   }
 
   .about_me-text {
     display: flex;
     align-items: flex-start;
     width: 50%;
-    gap: 1.2rem;
-    padding-left: 5rem;
+    gap: 2.4rem;
   }
 
   .about_me-text p {
     min-width: 100%;
-    min-height: 17rem;
+    max-height: 10rem;
     font-size: 2rem;
     line-height: 3.2rem;
   }
@@ -724,7 +725,6 @@ footer {
   }
 
   .about_me .btn-area {
-    position: inherit;
     min-width: 16rem;
     min-height: 4.8rem;
   }
@@ -743,7 +743,7 @@ footer {
   }
 
   .about_me hr {
-    width: 92%;
+    width: 100%;
     border: 0.1rem solid #fff;
   }
 
@@ -751,7 +751,8 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 16rem;
+    gap: 14%;
+    max-height: 56rem;
   }
 
   .skills-container {
@@ -774,7 +775,7 @@ footer {
     align-items: flex-start;
     min-width: 113rem;
     gap: 10.4rem;
-    padding-right: 15rem;
+    padding-right: 39rem;
   }
 
   .contact-form-container p {
