Remove bottom margin to the horizontal line in the works container to center the line

--- a/style.css
+++ b/style.css
@@ -656,10 +656,11 @@ footer {
     margin-right: 1.5rem;
   }
 
-  .line {
+  .works-container .line {
     height: 0;
     min-width: 69%;
     border: 1px solid #212121;
+    margin-bottom: 0;
   }
 
   .works-header-multipost {
