--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   border: 0;
@@ -22,27 +24,34 @@ main {
   align-items: center;
 }
 
+header {
+  min-width: 100%;
+}
+
 .navbar {
   background-color: #3c3a39;
   display: flex;
   justify-content: space-between;
   align-items: center;
   min-height: 4.8rem;
-  min-width: 37.5rem;
-}
-
-.nav-elements {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 3rem;
 }
 
 .hide {
   display: none;
 }
 
-.nav-elements a {
+.ham-icon {
+  margin: 2rem;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  height: 2.5rem;
+  width: 2.5rem;
+  cursor: pointer;
+  z-index: 100;
+}
+
+.nav-item a {
   font-family: "Inter", sans-serif;
   font-size: 1.7rem;
   line-height: 2rem;
@@ -67,21 +76,82 @@ main {
   text-decoration: none;
 }
 
-.ham-menu {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 0.8rem;
-  min-width: 4rem;
-  min-height: 4rem;
-  border-radius: 8rem;
+/********* Hamburger menu and on-Click action *********/
+
+/** Hamburger icon and animations **/
+
+@media (max-width: 768px) {
+  .bar {
+    height: 0.2rem;
+    background: #fff;
+    margin: 0.3rem 0;
+    transform-origin: left;
+    transition: all 0.3s;
+  }
+
+  .ham-icon.active .bar:nth-child(1) {
+    transform: rotate(45deg);
+  }
+
+  .ham-icon.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .ham-icon.active .bar:nth-child(3) {
+    transform: rotate(-45deg);
+  }
+
+  /** hamburger menu **/
+
+  .nav-menu {
+    display: none;
+  }
+
+  .nav-menu-hide.active {
+    min-width: 100%;
+    min-height: 100%;
+    position: fixed;
+    bottom: 0.0001rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    padding-top: 12rem;
+    background-color: #3c3a39;
+    padding-left: 1.5rem;
+    transition: 0.3s;
+  }
+
+  .close-icon.active {
+    position: fixed;
+    right: 10%;
+    margin-top: 8%;
+    margin-right: -4.5%;
+  }
+
+  .nav-item a {
+    height: 5.6rem;
+    width: 32.7rem;
+    font-family: "Inter", sans-serif;
+    font-size: 3.2rem;
+    line-height: 4.4rem;
+    text-align: center;
+    font-weight: 600;
+    text-decoration: none;
+    color: #fff;
+  }
+
+  .nav-link::after {
+    display: block;
+    content: "";
+    width: 90%;
+    height: 1px;
+    background: #fff;
+    position: absolute;
+  }
 }
 
-.ham-img {
-  width: 2.4rem;
-  height: 2.4rem;
-  display: block;
-}
+/**********************   */
 
 /*** Main - Headline ***/
 
@@ -93,7 +163,7 @@ main {
   padding-top: 12rem;
   padding-left: 2.4rem;
   min-height: 59rem;
-  min-width: 37.5rem;
+  min-width: 100%;
   background-color: #1c1a19;
   background-image: url("./img/background/illustration-header-mobile.svg");
   background-repeat: no-repeat;
@@ -281,11 +351,16 @@ footer .media-img {
 .project-content {
   display: flex;
   flex-direction: column;
-  gap: 3.2rem;
+  justify-content: space-between;
   background-image: url(./img/background/projects-background.png);
   background-repeat: no-repeat;
   background-size: contain;
-  max-width: 32.7rem;
+  min-width: 32.7rem;
+}
+
+.project-text {
+  padding-top: 9rem;
+  padding-left: 1rem;
 }
 
 .project-content h1 {
@@ -295,7 +370,6 @@ footer .media-img {
   line-height: 4.4rem;
   color: #fff;
   text-align: left;
-  padding-left: 1rem;
 }
 
 .project-content p {
@@ -305,13 +379,12 @@ footer .media-img {
   line-height: 2.4rem;
   color: #fff;
   max-width: 29.5rem;
-  padding-left: 1rem;
+  padding-bottom: 1rem;
 }
 
 .project-content ul {
   display: flex;
   gap: 1.2rem;
-  padding-left: 1rem;
 }
 
 .list-area {
@@ -327,7 +400,7 @@ footer .media-img {
   padding: 1rem;
 }
 
-.large-btn-area {
+.project-box .large-btn-area {
   padding: 1rem;
   text-align: center;
   background-color: #ff6b00;
@@ -543,8 +616,23 @@ footer {
     padding-right: 12rem;
   }
 
+  .nav-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 3rem;
+  }
+
   .hide {
     display: block;
+  }
+
+  .nav-item a {
+    visibility: visible;
+  }
+
+  .ham-icon {
+    display: none;
   }
 
   .brand-name {
@@ -552,10 +640,6 @@ footer {
     line-height: 2rem;
     padding-left: 8%;
     animation: slideInLeft 2s 0.3s;
-  }
-
-  .ham-menu {
-    display: none;
   }
 
   /** Headline **/
@@ -676,11 +760,6 @@ footer {
 
   .works-stories {
     flex-basis: 30%;
-  }
-
-  .project-content {
-    min-width: 100%;
-    padding-top: 6rem;
   }
 
   .left {
