Fix contact form button not having the correct background color

--- a/style.css
+++ b/style.css
@@ -332,6 +332,7 @@ footer .media-img {
   min-width: 10rem;
   min-height: 2.4rem;
   color: #fff;
+  background-color: #ff6b00;
   text-decoration: none;
 }
 
